# evm-tests

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  patch_modexp.py  plan-s05.sh  pyproject.toml  test_deploy.py  test_out.txt
adapter/: __init__.py  account_query_generator.py  arithmetic_generator.py  assembler.py  bitwise_generator.py  block_context_generator.py  bootstrap.py  call_context_generator.py  cli.py  comparison_generator.py  control_flow_generator.py  env.py  executor.py  generator.py  inventory.py  keccak_generator.py  log_generator.py  log_probe.py  manifest.py  memory_generator.py  models.py  oracle.py  precompile_generator.py  profile.py  report.py  selector.py  signer.py  stack_generator.py  system_generator.py  system_witness.py  tx_context_generator.py
docs/: benchmark-coverage-status.md  phase0-inventory-design.md  prague-osaka-el-capabilities-design.md  project-handoff.md  upstream-execution-specs-migration-plan.md
profiles/: juchain.toml  mock.toml
scripts/: assert_report_success.py  summarize_rpc_reports.py  sync_upstream_artifacts.py
suites/manifests/: custom_eip7702_smoke.json  custom_storage_smoke.json  custom_tx_admission_smoke.json  debug_log_0.json  debug_log_1mib.json  debug_log_1mib_fixed.json  juchain_deploy_smoke.json  juchain_smoke.json  juchain_storage_smoke.json  upstream_account_query_mapped.json  upstream_arithmetic_mapped.json  upstream_bitwise_mapped.json  upstream_block_context_mapped.json  upstream_call_context_mapped.json  upstream_keccak_mapped.json  (+10 more)
tests/: test_harness.py  test_precompile_generator.py
(+30 files in other folders)
